1. Color contrast is fixed for the 4 items

--- a/src/components/SelectionInput/SelectionInput.css
+++ b/src/components/SelectionInput/SelectionInput.css
@@ -45,7 +45,7 @@
     display: block;
     padding: 10px;
     text-decoration: none;
-    color: #8aa8bd;
+    color: #517590;
     border-bottom: 1px solid #e6e8ea;
     box-shadow: inset 0 1px 0 rgba(255,255,255,1);
     transition: all 0.1s ease-out;
